--- a/FinalPrj/src/main/webapp/resources/template/navbar-v1-feed-sidebar.html
+++ b/FinalPrj/src/main/webapp/resources/template/navbar-v1-feed-sidebar.html
@@ -1173,14 +1173,14 @@
                                 <li class="is-active">
                                     <a>
                                         <i data-feather="activity"></i>
-                                        <span>Feed</span>
+                                        <span>이용관리</span>
                                         <span class="close-icon">
                                                 <i data-feather="chevron-right"></i>
                                             </span>
                                     </a>
                                     <ul class="submenu">
                                         <li class="is-subactive">
-                                            <a>Trending <span class="tag">4</span></a>
+                                            <a>Trending</a>
                                         </li>
                                         <li>
                                             <a>Popular</a>
