datatable 추가, 편지작업중

--- a/FinalPrj/src/main/webapp/resources/template/inbox.html
+++ b/FinalPrj/src/main/webapp/resources/template/inbox.html
@@ -970,6 +970,14 @@
                             <span class="name">Starred</span>
                         </a>
                         <a href="#" class="item">
+                            <i data-feather="selfie"></i>
+                            <span class="name">Starred</span>
+                        </a>
+                        <a href="#" class="item">
+                            <i data-feather="clown"></i>
+                            <span class="name">Starred</span>
+                        </a>
+                        <a href="#" class="item">
                             <i data-feather="send"></i>
                             <span class="name">Sent Mail</span>
                         </a>
